sedikit penyesuaian karena perubahan nama file image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="preview Albedo" id="albedo">
             <a href="#megumi" class="previous"><</a>
             <img
-              src="image action figure/9055cd942f482281dc649de70f42bf621b155c5b_original-removebg-preview.png"
+              src="image action figure/albedo.png"
               alt="Action Figure Albedo"
             />
             <a href="#asuna" class="next">></a>
@@ -42,7 +42,7 @@
           <div class="preview Asuna" id="asuna">
             <a href="#albedo" class="previous"><</a>
             <img
-              src="image action figure/GSC-Sword-Art-Online-Alicization-War-of-Underworld-Asuna-Action-Figure-Anime-Model-Desktop-Decorations-Collectible.jpg_Q90.jpg_-removebg-preview.png"
+              src="image action figure/asuna.png"
               alt="Action Figure Asuna"
             />
             <a href="#megumi" class="next">></a>
@@ -50,7 +50,7 @@
           <div class="preview Megumi" id="megumi">
             <a href="#asuna" class="previous"><</a>
             <img
-              src="image action figure/20230718_221401.png"
+              src="image action figure/yukino.png"
               alt="Action Figure Megumi"
             />
             <a href="#albedo" class="next">></a>
