--- a/index.html
+++ b/index.html
@@ -27,34 +27,14 @@
       <header class="heading">
         <h1>get your action figure now!</h1>
         <p>Dapatkan action figure berkualitas dengan harga terjangkau</p>
-        <p>Cek lebih banyak lagi <a href="">disini</a></p>
+        <p>Cek lebih banyak lagi <a href="#product">disini</a></p>
       </header>
       <section class="preview_home">
         <div class="actionFigure">
-          <div class="preview Albedo" id="albedo">
-            <a href="#megumi" class="previous"><</a>
-            <img
-              src="image action figure/albedo.png"
-              alt="Action Figure Albedo"
-            />
-            <a href="#asuna" class="next">></a>
-          </div>
-          <div class="preview Asuna" id="asuna">
-            <a href="#albedo" class="previous"><</a>
-            <img
-              src="image action figure/asuna.png"
-              alt="Action Figure Asuna"
-            />
-            <a href="#megumi" class="next">></a>
-          </div>
-          <div class="preview Megumi" id="megumi">
-            <a href="#asuna" class="previous"><</a>
-            <img
-              src="image action figure/yukino.png"
-              alt="Action Figure Megumi"
-            />
-            <a href="#albedo" class="next">></a>
-          </div>
+          <div class="previous"><</div>
+          <img src="image action figure/albedo.png"
+          alt="action-figure-preview-image srcset="" class="preview" title="albedo">
+          <div class="next">></div>
         </div>
       </section>
       <section class="product" id="product"></section>
